--- a/NavBarEx/NavBarEx.csproj
+++ b/NavBarEx/NavBarEx.csproj
@@ -105,11 +105,17 @@
     <PackageReference Include="Xamarin.Essentials" Version="1.6.1" />
   </ItemGroup>
   <ItemGroup>
-    <AndroidResource Include="Resources\drawable\ic_newnotifi.png" />
-    <AndroidResource Include="Resources\drawable\ic_newfav.png" />
-    <AndroidResource Include="Resources\drawable\ic_newhome.png" />
     <AndroidResource Include="Resources\drawable\icon_selector.xml" />
     <AndroidResource Include="Resources\menu\menu_item.xml" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\ic_homenew.xml" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\ic_fav.xml" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\ic_notification.xml" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it.
